--- a/index.html
+++ b/index.html
@@ -1,44 +1,22 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Gabriel Hildreth</title>
-</head>
-<body>
-  <h1>Hello World</h1>
-  <h2>Intro</h2>
-    <p> I majored in Sociology when I attended university, and after completing a 10 week bootcamp at Lighthouse Labs I finally feel like I've found my true calling: web development.</p>
-
-    <h4>Projects</h4>
-    <ul>
-      <li><a href="https://github.com/ghildreth/jungle-rails">Jungle</a></li>
-      <li><a href="https://github.com/ghildreth/chattyApp">Chatty App</a></li>
-      <li><a href="https://github.com/ghildreth/cardGame">Goofspiel </a></li>
-      <li><a href="https://github.com/ghildreth/tweeter">Tweeter</a></li>
-      <li><a href="https://github.com/ghildreth/TinyApp">Tiny App</a></li>
-    </ul>
-
-    <h3>Qualifications</h3>
-    <ul>
-      <li>Education</li>
-      ## Lighthouse Labs
-      2018
-      Immersive Web Development Bootcamp
-
-      ## University of California Santa Cruz
-      BA Sociology 2012
-      Focus on statistical entry and analysis.
-      A rigorous program of study that ensures that I was trained in the main theoretical and methodological of sociology -- which is diverse enough to fit in my recent technological training at Lighthouse Labs.
-      I have aspirations to create projects and applications that will have a lasting social impact.
-      <li>Work Experience</li>
-
-      Fairmont Hotels and Resorts Waterfront
-      Server
-      May 2014 to Current
-      Expert with Micros Systems POS.  Responsible for financial reads and requiring due backs. Team player in a fast paced environment. "Full Stack Server": ability to effectively to communicate with front (guests, serving colleagues) and back of house (other hotel departments) quite similarly  to being a web dev and understanding the larger goals to see the bigger picture.
-
-      Hillstone Restaurant Group  Los Altos Grill
-      Head Server
-      Oct 2010 to Jun 2013
-      Utilized MS Excel to generate a daily sales and profit report.  Contributed to the espirit de corps of Hillstone's unique corporate culture and honed communication skills within my team to provide the optimal guest experience
-    </ul>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hello Bulma!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p>
+    </div>
+  </section>
+  </body>
 </html>
