--- a/index.html
+++ b/index.html
@@ -8,48 +8,82 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
+<section class="hero is-info is-large">
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenuHeroB">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHeroB" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active">
+              Home
+            </a>
+            <a class="navbar-item">
+              Examples
+            </a>
+            <a class="navbar-item">
+              Documentation
+            </a>
+            <span class="navbar-item">
+              <a class="button is-info is-inverted">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Download</span>
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <p class="title">
+        Title
+      </p>
       <p class="subtitle">
-        My Portfolio!
+        Subtitle
       </p>
     </div>
-            <h4>Projects</h4>
-    <ul>
-      <li><a href="https://github.com/ghildreth/jungle-rails">Jungle</a></li>
-      <li><a href="https://github.com/ghildreth/chattyApp">Chatty App</a></li>
-      <li><a href="https://github.com/ghildreth/cardGame">Goofspiel </a></li>
-      <li><a href="https://github.com/ghildreth/tweeter">Tweeter</a></li>
-      <li><a href="https://github.com/ghildreth/TinyApp">Tiny App</a></li>
-    </ul>
+  </div>
 
-    <h3>Qualifications</h3>
-    <ul>
-      <li>Education</li>
-      ## Lighthouse Labs
-      2018
-      Immersive Web Development Bootcamp
-
-      ## University of California Santa Cruz
-      BA Sociology 2012
-      Focus on statistical entry and analysis.
-      A rigorous program of study that ensures that I was trained in the main theoretical and methodological of sociology -- which is diverse enough to fit in my recent technological training at Lighthouse Labs.
-      I have aspirations to create projects and applications that will have a lasting social impact.
-      <li>Work Experience</li>
-
-      Fairmont Hotels and Resorts Waterfront
-      Server
-      May 2014 to Current
-      Expert with Micros Systems POS.  Responsible for financial reads and requiring due backs. Team player in a fast paced environment. "Full Stack Server": ability to effectively to communicate with front (guests, serving colleagues) and back of house (other hotel departments) quite similarly  to being a web dev and understanding the larger goals to see the bigger picture.
-
-      Hillstone Restaurant Group  Los Altos Grill
-      Head Server
-      Oct 2010 to Jun 2013
-      Utilized MS Excel to generate a daily sales and profit report.  Contributed to the espirit de corps of Hillstone's unique corporate culture and honed communication skills within my team to provide the optimal guest experience
-    </ul>
-  </section>
+  <div class="hero-foot">
+    <nav class="tabs is-boxed is-fullwidth">
+      <div class="container">
+        <ul>
+          <li class="is-active">
+            <a>Overview</a>
+          </li>
+          <li>
+            <a>Modifiers</a>
+          </li>
+          <li>
+            <a>Grid</a>
+          </li>
+          <li>
+            <a>Elements</a>
+          </li>
+          <li>
+            <a>Components</a>
+          </li>
+          <li>
+            <a>Layout</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+</section>
   </body>
 </html>
