--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item">
-            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+            <!-- <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo"> -->
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroB">
             <span></span>
@@ -38,7 +38,7 @@
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                <span>Download</span>
+                <span>Find me</span>
               </a>
             </span>
           </div>
@@ -50,10 +50,10 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <p class="title">
-        Title
+        Software Engineer
       </p>
       <p class="subtitle">
-        Subtitle
+        Web Developer
       </p>
     </div>
   </div>
