add target _blank to anchor link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="icon">
                   <i class="fab fa-github"></i>
                 </span>
-                <a href="https://github.com/ghildreth" <span>Find me</span> </a>
+                <a href="https://github.com/ghildreth" target="_blank"> <span>Find me on GitHub</span> </a>
               </a>
             </span>
           </div>
