add link to resume and github, remove extra nav item

--- a/index.html
+++ b/index.html
@@ -27,20 +27,25 @@
             <a class="navbar-item is-active">
               Home
             </a>
-            <a class="navbar-item">
-              Examples
+            <a href="https://resume.creddle.io/resume/h55x9qcr853"
+               target="_blank"
+               class="navbar-item">
+              Resume
             </a>
-            <a class="navbar-item">
+<!--             <a class="navbar-item">
               Documentation
-            </a>
+            </a> -->
             <span class="navbar-item">
-              <a class="button is-info is-inverted">
+              <a class="button is-info is-inverted"
+                 href="https://github.com/ghildreth"
+                 target="_blank">
                 <span class="icon">
-                  <i class="fab fa-github"></i>
+                  < <i class="fab fa-github"></i>
                 </span>
-                <a href="https://github.com/ghildreth" target="_blank"> <span>Find me on GitHub</span> </a>
+                <span>Find me</span>
               </a>
             </span>
+          </a>
           </div>
         </div>
       </div>
