remove a tag on hero foot

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                  href="https://github.com/ghildreth"
                  target="_blank">
                 <span class="icon">
-                  < <i class="fab fa-github"></i>
+                  <i class="fab fa-github"></i>
                 </span>
                 <span>Find me</span>
               </a>
@@ -71,12 +71,12 @@
             <a>Overview</a>
           </li>
           <li>
-            <a>Modifiers</a>
+            <a>Projects</a>
           </li>
           <li>
-            <a>Grid</a>
+            <a>About me</a>
           </li>
-          <li>
+<!--           <li>
             <a>Elements</a>
           </li>
           <li>
@@ -85,7 +85,7 @@
           <li>
             <a>Layout</a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </nav>
   </div>
