--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item">
+
+            <figure class="image is-128x128">
+              <img src="https://cdn.pixabay.com/photo/2018/05/21/21/37/moon-3419609_960_720.jpg">
+            </figure>
             <!-- <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo"> -->
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroB">
