--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="navbar-brand">
           <a class="navbar-item">
 
-            <figure class="image is-128x128">
-              <img src="https://cdn.pixabay.com/photo/2018/05/21/21/37/moon-3419609_960_720.jpg">
-            </figure>
+
+              <img src="https://cdn.pixabay.com/photo/2018/05/21/21/37/moon-3419609_960_720.jpg" alt="Logo">
+
             <!-- <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo"> -->
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroB">
@@ -59,10 +59,10 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <p class="title">
-        Software Engineer
+        Gabriel Hildreth
       </p>
       <p class="subtitle">
-        Web Developer
+        Full-stack Developer
       </p>
     </div>
   </div>
