add href to div id

--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
       <div class="container">
         <div class="navbar-brand">
           <a class="navbar-item">
-
-
-              <img src="https://cdn.pixabay.com/photo/2018/05/21/21/37/moon-3419609_960_720.jpg" alt="Logo">
-
             <!-- <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo"> -->
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroB">
@@ -72,7 +68,7 @@
       <div class="container">
         <ul>
           <li class="is-active">
-            <a>Overview</a>
+            <a href="#Overview">Overview</a>
           </li>
           <li>
             <a>Projects</a>
@@ -92,6 +88,12 @@
         </ul> -->
       </div>
     </nav>
+  </div>
+
+  <div id="Overview">
+    <p>
+      I majored in Sociology when I attended university, and after completing a 10 week bootcamp at Lighthouse Labs I finally feel like I've found my true calling: web development.
+    </p>
   </div>
 </section>
   </body>
