add class section to div id overview

--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
     </nav>
   </div>
 </section>
- <div id="Overview">
+ <div id="Overview" class="section">
+
     <p>
       I majored in Sociology when I attended university, and after completing a 10 week bootcamp at Lighthouse Labs I finally feel like I've found my true calling: web development.
           <h3>Qualifications</h3>
     <ul>
       <li>Education</li>
-      ## Lighthouse Labs
+      Lighthouse Labs
       2018
       Immersive Web Development Bootcamp
 
-      ## University of California Santa Cruz
+      University of California Santa Cruz
       BA Sociology 2012
       Focus on statistical entry and analysis.
       A rigorous program of study that ensures that I was trained in the main theoretical and methodological of sociology -- which is diverse enough to fit in my recent technological training at Lighthouse Labs.
