add images for portfolio and text

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <nav class="breadcrumb grid-xl" aria-label="breadcrumbs">
         <ul>
           <li><a href="#">Home</a></li>
+          <li><a href="https://resume.creddle.io/resume/h55x9qcr853" target="_blank">Resumé</a></li>
           <li class="is-active"><a href="#" aria-current="page">Welcome to my page!</a></li>
 
         </ul>
@@ -77,27 +78,140 @@
         <figure class="columns is-moblie is-variable is-0 is-marginless grid-xl">
           <div class="column">
             <div class="image card">
-              <a><img src="images/beercat.png"></a>
+              <a href="https://github.com/ghildreth/Beer-Cat-Tourism-App" target="_blank"><img src="images/beercat.png"></a>
             </div>
           </div>
           <div class="column">
             <div class="image card">
-              <a><img src="images/chatty.png"></a>
+              <a href="https://github.com/ghildreth/chattyApp" target="_blank"><img src="images/austin.png"></a>
             </div>
           </div>
           <div class="column">
             <div class="image card">
-              <a><img src="images/goof.jpg"></a>
+              <a href="https://github.com/ghildreth/jungle-rails" target="_blank"><img src="images/jungle.png"></a>
             </div>
+          </div>
+          <div class="column">
+            <div class="image card">
+              <a href="https://github.com/ghildreth/cardGame" target="_blank"><img src="images/truegoof.png"></a>
+            </div>
+          </div>
+          <div class="column">
+            <div class="image card">
+              <a href="https://github.com/ghildreth/tweeter" target="_blank"><img src="images/tweet.png"></a>
+            </div>
+          </div>
           </div>
         </figure>
         <figcaption>
           <small class="level-item has-text-grey">
-            These projects were built in less than a week! <a href="https://github.com/ghildreth" target="blank">Find out more on GitHub<i class="fab fa-github"></i></a>
+            These projects, and more, were built in less than a week! <a href="https://github.com/ghildreth" target="blank">You can find them here on my GitHub<i class="fab fa-github"></i></a>
           </small>
         </figcaption>
 
-    </div>
+<!--         <div class="content">
+          <h1>Hello World</h1>
+          <h2>Hello World</h2>
+          <h3>Hello World</h3>
+          <h4>Hello World</h4>
+          <h5>Hello World</h5>
+          <h6>Hello World</h6> -->
+          <div class="content is-primary">
+            <h1>Hello World</h1>
+            <p>My background with coding started in 2004 when MySpace.com began and allowed users edit their home-pages with HTML and CSS packages. Although I’ve been mainly into hardware and IT, this year turns the page to the next chapeter in my life: I plunged into the world of programming: featuring JavaScript, Ruby and Python. I’ve found my calling! I wish to use my knowledge of sociology, hospitality and music to fuse with code. I yearn to make meaningful applications that will have a lasting impact on society.</p>
+            <h2>Lighthouse Labs</h2>
+            <p>I chose to switch careers because I wanted to use my creativity to build things. Lighthouse Labs gave me the guidance to build using powerful languages, libraries, frameworks. My main focus has been growing as a JavaScript developer. With this comes the other two piece of the holy trinity: HTML and CSS. Before starting bootcamp I was able to practice with Python (through Udacity’s Intro to Computer Science Nanodegree). While attending Lighthouse Labs, I also became proficient with Ruby.  During this time in bootcamp, I discovered one of my favorite languages is SQL. Actually, most of my projects are using PostgreSQL which has improved my relational databases skills. Although, I also have experience using noSQL such as: MongoDB. In terms of libraries, our week 3 project “Tweeter” honed in my skills using JQuery. Later on in the course, week 5, we started training with React.js. So, by first using vanilla Javascript then JQuery we developed an appreciation for the library. Thereby learning React.js after JQuery furthered our appreciation for the framework and ensured that we understood the concepts of what’s happening underneath the magic. Lighthouse Labs helped me understand the power behind Node.js, our first project is run on Node.js/Express. From that very first project, we learned a great deal behind the technologies used to run servers, HTTP and RESTful conventions. So, by the time we training with Ruby on Rails, we had a fundamental understanding of MCV, routes and CRUD. Here are some bullet points from my overall experience with LHL:</p>
+            <ul>
+              <li>Learning How to Learn</li>
+              <li>Effective Problem Solving</li>
+              <li>Becoming Full-Stack Developer</li>
+              <li>Using Version Control</li>
+              <li>Collaboration on Group Projects</li>
+              <!-- <li>Ut non enim metus.</li> -->
+            </ul>
+            <h3>Sociology Degree</h3>
+            <p>A rigorous program of study that ensures that I was trained in the main theoretical and methodological of sociology -- which
+            is diverse enough to fit in my recent technological training at Lighthouse Labs.
+            I have aspirations to create projects and applications that will have a lasting social impact. Some highlights of my education:</p>
+            <ol>
+              <li>Focus on statistical entry and analysis.</li>
+              <li>Passion for manipulating data</li>
+              <li>I understand the importance of business, capital and means of production</li>
+              <li>I’ve studied the social implications of the internet, technology and media </li>
+              <li>I want to find out how technology can more our lives better</li>
+            </ol>
+            <blockquote>"Human well-being is not a random phenomenon. It depends on many factors - ranging from genetics and neurobiology to sociology and economics. But, clearly, there are scientific truths to be known about how we can flourish in this world. Whereever we can have an impact on the well-being of others, questions of morality apply."
+              <small>- Sam Harris</small></blockquote>
+   <!--          <p>Quisque at semper enim, eu hendrerit odio. Etiam auctor nisl et <em>justo sodales</em> elementum. Maecenas ultrices lacus quis neque consectetur, et lobortis nisi molestie.</p>
+            <p>Sed sagittis enim ac tortor maximus rutrum. Nulla facilisi. Donec mattis vulputate risus in luctus. Maecenas vestibulum interdum commodo.</p>
+            <dl>
+              <dt>Web</dt>
+              <dd>The part of the Internet that contains websites and web pages</dd>
+              <dt>HTML</dt>
+              <dd>A markup language for creating web pages</dd>
+              <dt>CSS</dt>
+              <dd>A technology to make HTML look better</dd>
+            </dl>
+            <p>Suspendisse egestas sapien non felis placerat elementum. Morbi tortor nisl, suscipit sed mi sit amet, mollis malesuada nulla. Nulla facilisi. Nullam ac erat ante.</p> -->
+            <h4>Passion</h4>
+            <p>I've found beauty in ideas that transcend Computer Science, namely: Recursion, Algo</p>
+            <pre>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;Hello World&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra nec nulla vitae mollis.&lt;/p&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+          </pre>
+<!--             <p>Maecenas eleifend sollicitudin dui, faucibus sollicitudin augue cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est maximus est porta condimentum in eu justo. Nulla id iaculis sapien.</p>
+            <table>
+              <thead>
+                <tr>
+                  <th>One</th>
+                  <th>Two</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Three</td>
+                  <td>Four</td>
+                </tr>
+                <tr>
+                  <td>Five</td>
+                  <td>Six</td>
+                </tr>
+                <tr>
+                  <td>Seven</td>
+                  <td>Eight</td>
+                </tr>
+                <tr>
+                  <td>Nine</td>
+                  <td>Ten</td>
+                </tr>
+                <tr>
+                  <td>Eleven</td>
+                  <td>Twelve</td>
+                </tr>
+              </tbody>
+            </table>
+            <p>Phasellus porttitor enim id metus volutpat ultricies. Ut nisi nunc, blandit sed dapibus at, vestibulum in felis. Etiam iaculis lorem ac nibh bibendum rhoncus. Nam interdum efficitur ligula sit amet ullamcorper. Etiam tristique, leo vitae porta faucibus, mi lacus laoreet metus, at cursus leo est vel tellus. Sed ac posuere est. Nunc ultricies nunc neque, vitae ultricies ex sodales quis. Aliquam eu nibh in libero accumsan pulvinar. Nullam nec nisl placerat, pretium metus vel, euismod ipsum. Proin tempor cursus nisl vel condimentum. Nam pharetra varius metus non pellentesque.</p>
+            <h5>Fifth level</h5>
+            <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
+            <figure>
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+              <img src="https://bulma.io/images/placeholders/256x256.png">
+              <figcaption>
+                Figure 1: Some beautiful placeholders
+              </figcaption>
+            </figure>
+            <h6>Sixth level</h6>
+            <p>Cras in nibh lacinia, venenatis nisi et, auctor urna. Donec pulvinar lacus sed diam dignissim, ut eleifend eros accumsan. Phasellus non tortor eros. Ut sed rutrum lacus. Etiam purus nunc, scelerisque quis enim vitae, malesuada ultrices turpis. Nunc vitae maximus purus, nec consectetur dui. Suspendisse euismod, elit vel rutrum commodo, ipsum tortor maximus dui, sed varius sapien odio vitae est. Etiam at cursus metus.</p>
+          </div>
+        </div> -->
+
   </section>
 
 </body>
