--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     display: block;
     height: auto;
     width: 100%;
-    height: 215px;
+    height: 230px;
 }
 img#gabe {
     height: auto;
@@ -44,6 +44,12 @@ article.media.center {
 
 .content.is-primary {
     margin-top: 80px;
+}
+
+@media (max-width: 672px){
+  :root {
+    font-size: 90%;
+  }
 }
 
   </style>
@@ -92,8 +98,8 @@ article.media.center {
         </div>
       </article>
       <div class="section is-paddingless-horizontal">
-        <h1 class="title is-2">About Me</h1>
-        <h2 class="subtitle is-3">Recent projects</h2>
+        <h1 class="title is-2">So, what have you done?</h1>
+        <h2 class="subtitle is-3">A Sample of My Recent Projects:</h2>
       </div>
 
         <figure class="columns is-moblie is-variable is-0 is-marginless grid-xl">
@@ -101,16 +107,26 @@ article.media.center {
             <div class="image card">
               <a href="https://github.com/ghildreth/Beer-Cat-Tourism-App" target="_blank"><img src="images/beercat.png" height="200"></a>
             </div>
+              <small class="level-item has-text-grey">
+               Beer Cat: Tourism App.
+              </small>
+            </small>
           </div>
           <div class="column">
             <div class="image card">
               <a href="https://github.com/ghildreth/chattyApp" target="_blank"><img src="images/austin.png"></a>
             </div>
+              <small class="level-item has-text-grey">
+                Chatty: Chatroom server.
+              </small>
           </div>
           <div class="column">
             <div class="image card">
               <a href="https://github.com/ghildreth/jungle-rails" target="_blank"><img src="images/jungle.png"></a>
             </div>
+              <small class="level-item has-text-grey">
+               Jungle: E-commerce website.
+              </small>
           </div>
 <!--           <div class="column">
             <div class="image card">
@@ -139,7 +155,7 @@ article.media.center {
           <h6>Hello World</h6> -->
           <div class="content is-primary">
             <h1>Hello World!</h1>
-            <p>My background with coding started in 2004 when MySpace.com began and allowed users edit their home-pages with HTML and CSS packages. Although I’ve been mainly into hardware and IT, this year turns the page to the next chapeter in my life: I plunged into the world of programming: featuring JavaScript, Ruby and Python. I’ve found my calling! I wish to use my knowledge of sociology, hospitality and music to fuse with code. I yearn to make meaningful applications that will have a lasting impact on society.</p>
+            <p>My background with coding started in 2004 when MySpace.com began and allowed users edit their home-pages with HTML and CSS. Although I’ve been mainly into hardware and IT, this year turns the page to the next chapeter in my life: I plunged into the world of programming: featuring JavaScript, Ruby and Python. I’ve found my calling! I wish to use my knowledge of sociology, hospitality and music to fuse with code. I yearn to make meaningful applications that will have a lasting impact on society.</p>
             <h2>Lighthouse Labs</h2>
             <p>I chose to switch careers because I wanted to use my creativity to build things. Lighthouse Labs gave me the guidance to build using powerful languages, libraries, frameworks. My main focus has been growing as a JavaScript developer. With this comes the other two piece of the holy trinity: HTML and CSS. Before starting bootcamp I was able to practice with Python (through Udacity’s Intro to Computer Science Nanodegree). While attending Lighthouse Labs, I also became proficient with Ruby.  During this time in bootcamp, I discovered one of my favorite languages is SQL. Actually, most of my projects are using PostgreSQL which has improved my relational databases skills. Although, I also have experience using noSQL such as: MongoDB. In terms of libraries, our week 3 project “Tweeter” honed in my skills using JQuery. Later on in the course, week 5, we started training with React.js. So, by first using vanilla Javascript then JQuery we developed an appreciation for the library. Thereby learning React.js after JQuery furthered our appreciation for the framework and ensured that we understood the concepts of what’s happening underneath the magic. Lighthouse Labs helped me understand the power behind Node.js, our first project is run on Node.js/Express. From that very first project, we learned a great deal behind the technologies used to run servers, HTTP and RESTful conventions. So, by the time we training with Ruby on Rails, we had a fundamental understanding of MCV, routes and CRUD. Here are some bullet points from my overall experience with LHL:</p>
             <ul>
@@ -175,7 +191,7 @@ article.media.center {
             </dl>
             <p>Suspendisse egestas sapien non felis placerat elementum. Morbi tortor nisl, suscipit sed mi sit amet, mollis malesuada nulla. Nulla facilisi. Nullam ac erat ante.</p> -->
             <h4>Passion</h4>
-            <p>I've found beauty in ideas that transcend Computer Science, namely: Algorithms, Logarithms and Recursion</p>
+            <p>I've found beauty in ideas that transcend Computer Science, namely: Algorithms, Logarithms and Recursion. Here's an example of a function that, so simply, displays the elegant nature of recursion in terms of mathematics.</p>
             <pre>
 function power(base, exponent) {
   if (exponent == 0) {
@@ -226,18 +242,19 @@ console.log(power(2, 3));
                 </tr>
               </tbody>
             </table> -->
-            <p>Phasellus porttitor enim id metus volutpat ultricies. Ut nisi nunc, blandit sed dapibus at, vestibulum in felis. Etiam iaculis lorem ac nibh bibendum rhoncus. Nam interdum efficitur ligula sit amet ullamcorper. Etiam tristique, leo vitae porta faucibus, mi lacus laoreet metus, at cursus leo est vel tellus. Sed ac posuere est. Nunc ultricies nunc neque, vitae ultricies ex sodales quis. Aliquam eu nibh in libero accumsan pulvinar. Nullam nec nisl placerat, pretium metus vel, euismod ipsum. Proin tempor cursus nisl vel condimentum. Nam pharetra varius metus non pellentesque.</p>
-            <h5>Fifth level</h5>
-            <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
+            
+            <h5>Other Projects</h5>
+            <p>This first image is the card game I built for my midterm project at Lightouse Labs: Goofspiel, also known as The Game of Pure Strategy or GOPS, is a card game for two or more players. It was invented by Merrill Flood while at Princeton University in the 1930s.</p>
             <figure>
-              <img src="https://bulma.io/images/placeholders/256x256.png">
-              <img src="https://bulma.io/images/placeholders/256x256.png">
+              <img src="images/truegoof.png">
+              <p>This next image is from my 2nd project I create called "Tweeter", which is a Twitter clone that demonstrates my proficency with JavaScript/CSS/HTML, AJAX calls and Databases.</p>
+              <img src="images/tweet.png">
               <figcaption>
-                Figure 1: Some beautiful placeholders
+                Goofspiel && "Tweeter";
               </figcaption>
             </figure>
-            <h6>Sixth level</h6>
-            <p>Cras in nibh lacinia, venenatis nisi et, auctor urna. Donec pulvinar lacus sed diam dignissim, ut eleifend eros accumsan. Phasellus non tortor eros. Ut sed rutrum lacus. Etiam purus nunc, scelerisque quis enim vitae, malesuada ultrices turpis. Nunc vitae maximus purus, nec consectetur dui. Suspendisse euismod, elit vel rutrum commodo, ipsum tortor maximus dui, sed varius sapien odio vitae est. Etiam at cursus metus.</p>
+            <h6>Future</h6>
+            <p>I'm always working on something. Please contact me if you're interested in building a project or need helping solving a problem. I love being able to overcome challenges.</p>
           </div>
         </div>
 
