add links to on-going work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hello World!</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script type="text/javascript" src="/node_modules/bulma-extensions/bulma-carousel/dist/bulma-carousel.min.js"></script>
   <!-- <link rel="stylesheet" href="styles/debug.css"> -->
   <style>
 
@@ -258,10 +259,14 @@ console.log(power(2, 3));
             </figure>
             <h6>Future</h6>
             <p>I'm always working on something. Please contact me if you're interested in building a project or need helping solving a problem. I love being able to overcome challenges.</p>
+          
+          <h6> On-going work</h6>
+            <p>I've been working on <a href="https://www.codewars.com/users/ghildreth" target="_blank" >Code Wars</a>, <a href="https://javascript30.com/" target="_blank">#JavaScript30</a></p>
+          
           </div>
         </div>
-
   </section>
 
 </body>
+
 </html>
