--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ img {
 
 </head>
 <body>
-<section class="hero is-success">
+<section class="hero is-primary">
   <section class="section is-paddingless-horizontal">
     <div class="container grid">
       <nav class="breadcrumb grid-xl" aria-label="breadcrumbs">
