fix type in sociology section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ h1 {
 
     <section class="section" id="about">
             <div class="container">
-              <div class="section">
+              <div class="section
+              ">
                   <div class="media-content">
                       <div class="content">
                         <p>
@@ -170,7 +171,7 @@ h1 {
                       <li>Passion for manipulating data</li>
                       <li>I understand the importance of business, capital and means of production</li>
                       <li>I’ve studied the social implications of the internet, technology and media </li>
-                      <li>I want to find out how technology can more our lives better</li>
+                      <li>I want to find out how technology can make our lives better</li>
                     </ol>
                     <blockquote>"Human well-being is not a random phenomenon. It depends on many factors - ranging from genetics and neurobiology to sociology and economics. But, clearly, there are scientific truths to be known about how we can flourish in this world. Whereever we can have an impact on the well-being of others, questions of morality apply."
                       <small>- Sam Harris</small></blockquote>
