fix type in sociology section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ h1 {
                     <ol>
                       <li>Focus on statistical entry and analysis.</li>
                       <li>Passion for manipulating data</li>
-                      <li>I understand the importance of business, capital and means of production</li>
+                      <li>I understand the importance of business, capital and the means of production</li>
                       <li>I’ve studied the social implications of the internet, technology and media </li>
                       <li>I want to find out how technology can make our lives better</li>
                     </ol>
@@ -188,7 +188,7 @@ h1 {
                     <p>Suspendisse egestas sapien non felis placerat elementum. Morbi tortor nisl, suscipit sed mi sit amet, mollis malesuada nulla. Nulla facilisi. Nullam ac erat ante.</p> -->
                     <h4 id="passion">Passion</h4>
                     <p>I've found beauty in ideas that transcend Computer Science, namely: Algorithms, Logarithms and Recursion. Here's an example of a function that, so simply, displays the elegant nature of recursion in terms of mathematics.</p>
-                    <!-- <!-- <pre> -->
+                    <pre>
         function power(base, exponent) {
           if (exponent == 0) {
             return 1;
