add images for lighthouse and uc santa cruz

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@ h1 {
                     <h1 id="intro" >Hello World!</h1>
                     <p>My background with coding started in 2004 when MySpace.com began and allowed users edit their home-pages with HTML and CSS.</p><br><p> Although I’ve been mainly into hardware and IT, this year turns the page to the next chapeter in my life: I plunged into the world of programming: featuring JavaScript, Ruby and Python. I’ve found my calling! </p><br><p></p>I wish to use my knowledge of sociology, hospitality and music to fuse with code. I yearn to make meaningful applications that will have a lasting impact on society.</p>
                     <h2 id="lhl">Lighthouse Labs</h2>
+                    <figure class="image is-256x256">
+                        <img src="https://lighthouselabs.ca/assets/home-1b1053e3e6e741308433e7e45af5783c8466e4bc14df186390ff707c05164f90.jpg">
+                      </figure>
                     <p>I chose to switch careers because I wanted to use my creativity to build things. Lighthouse Labs gave me the guidance to build using powerful languages, libraries, frameworks. </p><br><p>My main focus has been growing as a JavaScript developer. With this comes the other two piece of the holy trinity: HTML and CSS. Before starting bootcamp I was able to practice with Python (through Udacity’s Intro to Computer Science Nanodegree). </p><br><p>While attending Lighthouse Labs, I also became proficient with Ruby.  During this time in bootcamp, I discovered one of my favorite languages is SQL. Actually, most of my projects are using PostgreSQL which has improved my relational databases skills. Although, I also have experience using noSQL such as: MongoDB. In terms of libraries, our week 3 project “Tweeter” honed in my skills using JQuery. Later on in the course, week 5, we started training with React.js. So, by first using vanilla Javascript then JQuery we developed an appreciation for the library. Thereby learning React.js after JQuery furthered our appreciation for the framework and ensured that we understood the concepts of what’s happening underneath the magic. </p><br><p>Lighthouse Labs helped me understand the power behind Node.js, our first project is run on Node.js/Express. From that very first project, we learned a great deal behind the technologies used to run servers, HTTP and RESTful conventions. So, by the time we training with Ruby on Rails, we had a fundamental understanding of MCV, routes and CRUD. Here are some bullet points from my overall experience with LHL:</p>
                     <ul>
                       <li>Learning How to Learn</li>
@@ -163,6 +166,9 @@ h1 {
                       <!-- <li>Ut non enim metus.</li> -->
                     </ul>
                     <h3 id="degree">Sociology Degree</h3>
+                    <figure class="image is-256x256">
+                        <img src="https://timekeepingscore.files.wordpress.com/2009/01/top10_mascots_banana_alt.jpg">
+                      </figure>
                     <p>A rigorous program of study that ensures that I was trained in the main theoretical and methodological of sociology -- which
                     is diverse enough to fit in my recent technological training at Lighthouse Labs.
                     I have aspirations to create projects and applications that will have a lasting social impact. Some highlights of my education:</p>
@@ -186,6 +192,8 @@ h1 {
                       <dd>A technology to make HTML look better</dd>
                     </dl>
                     <p>Suspendisse egestas sapien non felis placerat elementum. Morbi tortor nisl, suscipit sed mi sit amet, mollis malesuada nulla. Nulla facilisi. Nullam ac erat ante.</p> -->
+                    
+                    
                     <h4 id="passion">Passion</h4>
                     <p>I've found beauty in ideas that transcend Computer Science, namely: Algorithms, Logarithms and Recursion. Here's an example of a function that, so simply, displays the elegant nature of recursion in terms of mathematics.</p>
                     <pre>
