add style to portfolio image and reverse img and text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <style> 
 
 .image img {
@@ -41,6 +42,7 @@ h1 {
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
+    font-family: Lobster Two;
 }
 .hero {
   font-family: 'Montserrat', sans-serif;
@@ -49,10 +51,21 @@ h1 {
 #gabe{
   border-radius: 50%;
   width: 80%;
+  border-color: #0d0d5d;
+  border-width: 10px;
+  border-style: solid;
 }
 
 pre {
     width: 100%;
+}
+
+.footer {
+    border-style: solid;
+}
+
+.title {
+    font-family: "Lobster Two", cursive;
 }
 
 
@@ -62,12 +75,6 @@ pre {
   <section class="hero is-fullheight is-mobile">
     <div class="hero-body">
         <div class="container has-text-centered is-fuild">
-        <h1 class="title is-size-2">
-            Gabriel Hildreth
-        </h1>
-            <p class="typewriter">
-                Welcome to my portfolio!
-            </p>
         <article class="media-center">
             <figure class="media-center">
                 <figure class="image is-1x1 ">
@@ -75,6 +82,12 @@ pre {
                 </figure>
             </figure>
         </article>
+        <h1 class="title is-size-2">
+                Gabriel Hildreth
+            </h1>
+                <p class="typewriter">
+                    Welcome to my portfolio!
+                </p>
 
 <h1>
     <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, my name is Gabriel Hildreth.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
